@@ -86,6 +86,9 @@
      [sshconnect2.c]
      sprinkle ARGSUSED on dispatch handlers
      nuke stale unusued prototype
+   - stevesk@cvs.openbsd.org 2008/11/01 06:43:33
+     [channels.c]
+     fix some typos in log messages; ok djm@
 
 20080906
  - (dtucker) [config.guess config.sub] Update to latest versions from
@@ -4820,4 +4823,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.5119 2008/11/03 08:26:18 djm Exp $
+$Id: ChangeLog,v 1.5120 2008/11/03 08:26:35 djm Exp $
